--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/styled-engine-sc": "^5.10.16",
     "gh-pages": "^4.0.0",
     "node": "^19.1.0",
+    "rc-slider": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.2.1",
